Update popup palette color labels on external FG/BG color changes

KisVisualColorSelector doesn't emit change signals when setting color,
and external background color changes were not handled at all.

This also fixes updates when swapping foreground/background colors
by clicking the labels.

BUG:441154